{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "265c38f5-dd18-4d34-b198-aec58e1627ff",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "50fd2809-3aa3-4a90-988e-1facf6773553",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PunchLeft",
                    "type": "Button",
                    "id": "8b9a08df-6bf7-4695-bf65-1a896cabdc98",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchRight",
                    "type": "Button",
                    "id": "cd6c89ac-440d-4a1b-a515-9be8d1153efe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchUp",
                    "type": "Button",
                    "id": "06649c4b-f947-4934-a87d-84ff8759bcf7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchDown",
                    "type": "Button",
                    "id": "8af85658-9b41-4e49-afd6-e99ec0a6a64e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchFront",
                    "type": "Button",
                    "id": "3c79e410-dbfc-437c-8d2b-0cc2344f3da9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a70d9922-f0f6-43c0-b25f-10f6ed27c689",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99722919-ee27-4606-9589-62aea2e8ae69",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0e8dc84-9cbd-4cd3-95f9-7ba2aabeb900",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4d42352-89e4-4a38-bab8-b521726fd409",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "165b9b6d-3666-460e-80ca-0489079304a0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchFront",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dpad",
                    "id": "cefc16fc-557a-44b0-939f-2ad792876b07",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}